--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "dist/index.js",
   "files": ["dist", "LISENCE"],
   "scripts": {
     "dev": "vite",
