--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "declaration": true,
-    "declarationDir": "@types",
+    "declarationDir": "dist",
     "emitDeclarationOnly": true,
     "module": "ESNext",
     "target": "ESNext",
