--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": ["dist", "@types", "LISENCE"],
   "scripts": {
     "dev": "vite",
