--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist", "@types", "LISENCE"],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": ["dist", "LISENCE"],
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc",
