--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,9 @@ jobs:
           git add dist
 
           # 변경 사항이 있을 경우에만 커밋 & 푸시
-          git commit -m "auto build [skip ci]"
-          git push
+          git diff --cached --quiet || (
+            git commit -m "auto build [skip ci]"
+            git push
+          )
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
