--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,18 +36,16 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
 
           # dist 폴더을 git stage에 추가
-          git add dist
+          git add dist/
 
           # 변경 사항이 있을 경우에만 커밋 & 푸시
           git diff --cached --quiet || (
             git commit -m "auto build [skip ci]"
-            git push
+            git push origin main
           )
         env:
-          GIT_AUTHOR_NAME: github-actions[bot]
-          GIT_AUTHOR_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
-          GIT_COMMITTER_NAME: github-actions[bot]
-          GIT_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
